force-app/main/default/objects/Sobha_Connect__c/Sobha_Connect__c.object-meta.xml
<CustomObject>
    <label>Sobha Connect</label>
    <nameField>
        <displayFormat>SC - {0000}</displayFormat>
        <label>Sobha Connect Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sobha Connect</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>