force-app/main/default/objects/Sobha_Connect__c/fields/BP_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BP_Owner_Name__c</fullName>
    <label>BP Owner Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>