force-app/main/default/objects/Sobha_Connect__c/fields/Create_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Create_Portal_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Portal Login</label>
    <type>Checkbox</type>
</CustomField>