force-app/main/default/objects/Sobha_Connect__c/fields/Geography_Manager__c.field-meta.xml
<CustomField>
    <fullName>Geography_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geography Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sobha_Connect5</relationshipName>
    <type>Lookup</type>
</CustomField>