force-app/main/default/objects/Sobha_Connect__c/fields/No_of_Sales_In_Last_Yea__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_In_Last_Yea__c</fullName>
    <label>No.of Sales In Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>