force-app/main/default/objects/Sobha_Connect__c/fields/No_of_Sales_In_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_In_Last_Year__c</fullName>
    <label>No.of Site Visit&apos;s In Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>