force-app/main/default/objects/Sobha_Connect__c/fields/Number_of_Site_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Site_Visits__c</fullName>
    <label>Number of Site Visits This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>