force-app/main/default/objects/Sobha_Connect__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration/Passport Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>