force-app/main/default/objects/Sobha_Connect__c/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <label>RERA Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>