force-app/main/default/objects/Sobha_Connect__c/fields/SC_Id__c.field-meta.xml
<CustomField>
    <fullName>SC_Id__c</fullName>
    <displayFormat>SC - {0000}</displayFormat>
    <externalId>true</externalId>
    <label>SC Id</label>
    <type>AutoNumber</type>
</CustomField>