force-app/main/default/objects/Sobha_Connect__c/fields/Send_SC_Mandate_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_SC_Mandate_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SC Mandate Letter</label>
    <type>Checkbox</type>
</CustomField>