force-app/main/default/objects/Sobha_Connect__c/fields/Sobha_Connect_Category__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect_Category__c</fullName>
    <label>Sobha Connect Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sobha Connect - China</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - India</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - KSA</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - Others</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - UAE</fullName>
            </value>
            <value>
                <fullName>Sobha Connect - UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>