force-app/main/default/objects/Sobha_Connect__c/fields/Total_Employees_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees_Count__c</fullName>
    <label>Total Employees Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>