force-app/main/default/objects/Sobha_Connect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Mobile_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Manager__c</columns>
    <columns>RERA_Number__c</columns>
    <columns>Sobha_Connect_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>