force-app/main/default/objects/Sobha_Connect__c/listViews/Maher_Sobha_Connects.listView-meta.xml
<ListView>
    <fullName>Maher_Sobha_Connects</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Address__c</columns>
    <columns>Agent_Category__c</columns>
    <columns>Agents_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel_Relationship_Manager__c</field>
        <operation>equals</operation>
        <value>Maher Baazakli</value>
    </filters>
    <label>Maher Sobha Connects</label>
    <sharedTo>
        <group>Maher</group>
    </sharedTo>
</ListView>