force-app/main/default/objects/Sobha_Connect__c/listViews/My_Sobha_Connects.listView-meta.xml
<ListView>
    <fullName>My_Sobha_Connects</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Sobha Connects</label>
    <sharedTo>
        <role>Channel_Relationship_Manager_2</role>
        <role>Channel_Relationship_Manager_3</role>
        <role>Channel_relationship_manager</role>
    </sharedTo>
</ListView>